...
        <TextView
            android:id="@+id/deck_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:labelFor="@id/edit_deck_name"
            android:text="@string/DeckNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_deck_name"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/CourseNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_deck_name"
            android:labelFor="@id/edit_course_name"/>

        <EditText
            android:id="@+id/edit_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
...
        <TextView
            android:id="@+id/school_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edit_school_name"
            android:text="@string/SchoolNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_course_name" />

        <EditText
            android:id="@+id/edit_school_name"
...
