...
    <string name="CourseString">Course Name</string>
    <string name="SchoolString">School Name</string>
    <string name="CategoryString">Category Name</string>
    <string name="ProfessorString">Professor Name</string>
    <string name="NameString">Deck Name</string>
    <string name="AddFlashcardLabel">+ Add Flashcard</string>
    <string name="TermString">Term</string>
    <string name="DefinitionString">Definition</string>
    <string name="Deck1String">Deck 1</string>
    <string name="Deck2String">Deck 2</string>
    <string name="AddDeckString">+ Add Deck</string>
    <string name="BackButton">Back</string>
    <string name="Username">Guest\'s Decks</string>
    <string name="UserWelcome">Welcome to Our App!</string>
...
